kubernetes/clusters/cluster-104/music-assistant/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: music-assistant
  namespace: default
  labels:
    app.kubernetes.io/name: music-assistant
    app.kubernetes.io/part-of: cluster-104
spec:
  type: ClusterIP
  ipFamilyPolicy: PreferDualStack
  ipFamilies:
    - IPv6
    - IPv4
  selector:
    app.kubernetes.io/name: music-assistant
  ports:
    - name: web
      port: 8095
      targetPort: web
      protocol: TCP
    - name: streams
      port: 8097
      targetPort: streams
      protocol: TCP
